Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,16 +1,16 @@
 ---
-title: 'Introduction'
+title: '어닝버드 가이드'
+sidebarTitle: "Short title"
 description: 'Example section for showcasing API endpoints'
 ---
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
 
-## Welcome
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+
+
+## 환영합니다
+
+[어닝버드](https://earningbirds.com)는 초기 제품을 테스트하고, 최고의 보상을 획득하는 테스트 플랫폼입니다.
 
 <Card
   title="Plant Store Endpoints"
@@ -19,6 +19,7 @@ There are two ways to build API documentation: [OpenAPI](https://mintlify.com/do
 >
   View the OpenAPI specification file
 </Card>
+
 
 ## Authentication
 
